--- a/src/container/Header/Modal.scss
+++ b/src/container/Header/Modal.scss
@@ -52,12 +52,18 @@
 }
 
 .modal-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 36px;
     font-weight: 600;
     line-height: 52px;
 }
 
 .modal-description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 15px;
     font-weight: 400;
     font-size: 16px;
@@ -120,9 +126,44 @@
 }
 
 .phone-uninput {
+    color: red !important;
+    background-color: rgba(255, 20, 145, 0.15);
     padding-left: 15px !important;
 }
 
 .custom-modal {
     backdrop-filter: blur(5px);
+}
+
+.empty-input input[name="name"] {
+    color: red !important;
+    background-color: rgba(255, 20, 145, 0.15);
+}
+
+.empty-input input[type="text"],
+.empty-input input[type="tel"] {
+    color: red !important;
+    background-color: rgba(255, 20, 145, 0.15);
+    padding-left: 15px !important;
+}
+
+.form-submitted {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 370px;
+    height: 350px;
+}
+
+.check {
+    width: 100px;
+    height: 100px;
+}
+
+.check-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 !important;
 }
