--- a/src/container/Responsive/Mobile-responsive.scss
+++ b/src/container/Responsive/Mobile-responsive.scss
@@ -109,4 +109,15 @@
         width: 100%;
         justify-content: flex-end;
     }
+    .modal-container, .modal-text {
+        display: flex;
+        align-items: center;
+        height: 90% !important;
+    }
+    .modal-container {
+        width: 100% !important;
+    }
+    .modal-default, .modal-text, .input-container input {
+        width: 100% !important;
+    }
 }
